--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -25,6 +26,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.2",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   },
